--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,9 @@ nav i {
   // xxl
   div.parallax {
     height: 700px !important;
+    > div > div {
+      background-attachment: fixed;
+    }
     h2 {
       font-size: 60px !important;
     }
@@ -22,126 +25,201 @@ nav i {
       font-size: 20px;
     }
   }
-    .backdrop {
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 700px;
-      background-color: rgba(128, 128, 128, 0.486);
-      backdrop-filter: blur(23px);
-      display: none;
-    }
+  .backdrop {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background-color: rgba(128, 128, 128, 0.486);
+    backdrop-filter: blur(23px);
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 400px 400px 400px;
+    row-gap: 12px;
+    column-gap: 12px;
+    top: 750px !important;
+    position: absolute;
+    padding: 2% !important;
+  }
 }
 @media screen and (min-width: 1200px) and(max-width:1400px) {
   //xl
+
   div.parallax {
     height: 700px !important;
+    > div > div {
+      background-attachment: fixed;
+    }
     h2 {
       font-size: 60px !important;
     }
     a {
       font-size: 20px;
     }
- 
-  }   .backdrop {
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 700px;
-      background-color: rgba(128, 128, 128, 0.486);
-      backdrop-filter: blur(23px);
-      display: none;
-    }
+  }
+  .backdrop {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background-color: rgba(128, 128, 128, 0.486);
+    backdrop-filter: blur(23px);
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 350px 350px 350px;
+    row-gap: 12px;
+    column-gap: 12px;
+    top: 750px !important;
+    position: absolute;
+    padding: 2% !important;
+  }
 }
 @media screen and (min-width: 992px) and(max-width:1200px) {
   //lg
   div.parallax {
     height: 700px !important;
+
     h2 {
       font-size: 60px !important;
     }
     a {
       font-size: 20px;
     }
- 
-  }   .backdrop {
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 700px;
-      background-color: rgba(128, 128, 128, 0.486);
-      backdrop-filter: blur(23px);
-      display: none;
-    }
+  }
+  .backdrop {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background-color: rgba(128, 128, 128, 0.486);
+    backdrop-filter: blur(23px);
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 320px 320px 320px;
+    row-gap: 12px;
+    column-gap: 12px;
+    top: 750px !important;
+    position: absolute;
+    padding: 2% !important;
+  }
 }
 @media screen and (min-width: 768px) and(max-width:992px) {
   //md
   div.parallax {
     height: 600px !important;
+
     h2 {
       font-size: 55px !important;
     }
     a {
       font-size: 19px;
     }
-    
-  }.backdrop {
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 600px;
-      background-color: rgba(128, 128, 128, 0.486);
-      backdrop-filter: blur(23px);
-      display: none;
-    }
+  }
+  .backdrop {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    background-color: rgba(128, 128, 128, 0.486);
+    backdrop-filter: blur(23px);
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+    justify-content: center;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px 300px 300px;
+    row-gap: 12px;
+    column-gap: 12px;
+    top: 650px !important;
+    position: absolute;
+    padding: 2% !important;
+  }
 }
 @media screen and (min-width: 576px) and(max-width:768px) {
   //sm
   div.parallax {
     height: 400px !important;
+
     h2 {
       font-size: 50px !important;
     }
     a {
       font-size: 17px;
     }
-   
-  } .backdrop {
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 400px;
-      background-color: rgba(128, 128, 128, 0.686);
-      backdrop-filter: blur(43px);
-      display: none;
-    }
+  }
+  .backdrop {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    background-color: rgba(128, 128, 128, 0.686);
+    backdrop-filter: blur(43px);
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 270px 270px 270px;
+    row-gap: 12px;
+    column-gap: 12px;
+    top: 450px !important;
+    position: absolute;
+    padding: 2% !important;
+  }
 }
 @media screen and (max-width: 576px) {
   //xs
   div.parallax {
     height: 300px !important;
+
     h2 {
       font-size: 30px !important;
     }
     a {
       font-size: 14px;
     }
-   
-  } .backdrop {
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 300px;
-      background-color: rgba(128, 128, 128, 0.686);
-      backdrop-filter: blur(43px);
-      display: none;
-    }
+  }
+  .backdrop {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    background-color: rgba(128, 128, 128, 0.686);
+    backdrop-filter: blur(43px);
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 200px 200px 200px;
+    row-gap: 12px;
+    column-gap: 12px;
+    top: 350px !important;
+    position: absolute;
+    padding: 2% !important;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -222,4 +300,35 @@ nav i {
   left: calc(50% - 48px) !important;
   top: calc(50px) !important;
   transform: translateX(-50%) !important;
+}
+
+.grid-container > * {
+  padding: 10px;
+}
+
+.grid-1-1 {
+  background-image: url(../images/grid1.jpg);
+}
+.grid-1-2 {
+  background-image: url(../images/grid2.jpg);
+}
+.grid-2-1 {
+  background-image: url(../images/grid3.jpg);
+}
+.grid-2-2 {
+  background-image: url(../images/grid4.jpg);
+}
+.grid-3 {
+  background-image: url(../images/grid5.jpg);
+}
+.grid-4 {
+  background-image: url(../images/grid6.jpg);
+}
+div.item > figure {
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  top: 0;
+  left: 0;
 }
