--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,8 +11,13 @@ nav a {
 nav i {
   color: white !important;
 }
+$height: 2000px;
+@mixin backdropheight($height) {
+  height: $height;
+}
 @media screen and (min-width: 1400px) {
   // xxl
+
   div.parallax {
     height: 700px !important;
     > div > div {
@@ -30,7 +35,7 @@ nav i {
     top: 50px;
     left: 0;
     width: 100%;
-    height: 700px;
+    @include backdropheight($height);
     background-color: rgba(128, 128, 128, 0.486);
     backdrop-filter: blur(23px);
     display: none;
@@ -39,7 +44,7 @@ nav i {
     display: grid;
 
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 400px 400px 400px;
+    grid-template-rows: 500px 500px 500px;
     row-gap: 12px;
     column-gap: 12px;
     top: 750px !important;
@@ -67,7 +72,7 @@ nav i {
     top: 50px;
     left: 0;
     width: 100%;
-    height: 700px;
+    @include backdropheight($height);
     background-color: rgba(128, 128, 128, 0.486);
     backdrop-filter: blur(23px);
     display: none;
@@ -76,7 +81,7 @@ nav i {
     display: grid;
 
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 350px 350px 350px;
+    grid-template-rows: 450px 450px 450px;
     row-gap: 12px;
     column-gap: 12px;
     top: 750px !important;
@@ -101,7 +106,7 @@ nav i {
     top: 50px;
     left: 0;
     width: 100%;
-    height: 700px;
+    @include backdropheight($height);
     background-color: rgba(128, 128, 128, 0.486);
     backdrop-filter: blur(23px);
     display: none;
@@ -110,7 +115,7 @@ nav i {
     display: grid;
 
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 320px 320px 320px;
+    grid-template-rows: 420px 420px 420px;
     row-gap: 12px;
     column-gap: 12px;
     top: 750px !important;
@@ -135,7 +140,7 @@ nav i {
     top: 50px;
     left: 0;
     width: 100%;
-    height: 600px;
+    @include backdropheight($height);
     background-color: rgba(128, 128, 128, 0.486);
     backdrop-filter: blur(23px);
     display: none;
@@ -145,7 +150,7 @@ nav i {
     justify-content: center;
 
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 300px 300px 300px;
+    grid-template-rows: 420px 420px 420px;
     row-gap: 12px;
     column-gap: 12px;
     top: 650px !important;
@@ -170,7 +175,7 @@ nav i {
     top: 50px;
     left: 0;
     width: 100%;
-    height: 400px;
+    @include backdropheight($height);
     background-color: rgba(128, 128, 128, 0.686);
     backdrop-filter: blur(43px);
     display: none;
@@ -178,8 +183,8 @@ nav i {
   .grid-container {
     display: grid;
 
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 270px 270px 270px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 400px 400px 400px 400px 400px 400px;
     row-gap: 12px;
     column-gap: 12px;
     top: 450px !important;
@@ -204,7 +209,7 @@ nav i {
     top: 50px;
     left: 0;
     width: 100%;
-    height: 300px;
+    @include backdropheight($height);
     background-color: rgba(128, 128, 128, 0.686);
     backdrop-filter: blur(43px);
     display: none;
@@ -212,11 +217,11 @@ nav i {
   .grid-container {
     display: grid;
 
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 200px 200px 200px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 400px 400px 400px 400px 400px 400px;
     row-gap: 12px;
     column-gap: 12px;
-    top: 350px !important;
+    top: 450px !important;
     position: absolute;
     padding: 2% !important;
   }
@@ -304,6 +309,7 @@ nav i {
 
 .grid-container > * {
   padding: 10px;
+  z-index: -1;
 }
 
 .grid-1-1 {
@@ -331,4 +337,15 @@ div.item > figure {
   background-position: center center;
   top: 0;
   left: 0;
+  a {
+    color: #06c !important;
+  }
+  i {
+    font-size: 26px !important;
+    &::before {
+     height: 100% !important;
+      
+      
+    }
+  }
 }
